[package]
name = "picolony"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.5"
embedded-graphics-core = "0.3.3"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
hash32 = "0.2.1"                 # 0.3.0 uses core::hash::Hash
heapless = "0.7.15"
nb = "1.0.0"
rp-pico = "0.4.1"
ssd1351 = "0.4.2"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
