[package]
name = "picolony"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
embedded-graphics-core = "0.3.3"
embedded-hal = "0.2.7"
fugit = "0.3.6"
hash32 = "0.3.1"
heapless = { git = "https://github.com/japaric/heapless", version = "0.8.0" } # Waiting release for hash32 0.3 support
nb = "1.0.0"
rp-pico = "0.6.0"
ssd1351 = "0.4.2"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
